** Fixed gsl_sf_hyperg_2F1(a,b,c,x) to avoid returning NaN for
   arguments |a|>10. [bug #24812]

** Added new routine gsl_linalg_complex_cholesky_invert to handle the
   matrix inversion for complex Cholesky decompositions (Huan Wu).

** Added new gsl_integrate_cquad routines for robust integration of
   difficult functions using the doubly-adaptive CQUAD algorithm
   (Pedro Gonnet).

** Improved the result of gsl_sf_atanint_e for large arguments by
   adding the first order 1/x correction term. [bug #29562]

** The gsl_multimin_fdfsolver multidimensional minimisers now return
   GSL_ENOPROG immediately if the generated trial point does not
   differ from the initial point (to machine precision), avoiding
   unnecessary further iterations.

** Added the functions gsl_vector_equal(x,y) and gsl_matrix_equal(x,y)
   for testing equality of two vectors or matrices.

** Added function gsl_eigen_nonsymmv_params to control the balancing
   transformation for eigenvector calculations. Balancing is now
   turned off by default for gsl_eigen_nonsymmv.

** Avoid segfault in Chebyshev series derivatives gsl_cheb_calc_deriv
   for n=1. [bug #29139]

* What was new in gsl-1.14:

** Upgraded to latest libtool, autoconf and automake (libtool-2.2.6b,
   autoconf-2.65, automake-1.11.1).  Fixes security hole in 'make
   dist' (see Automake CVE-2009-4029).

** Added support for "multisets", which are similar to permutations
   and combinations.  A multiset is an array of k integers in the
   range 0 to n-1 where each value may occur more than once. Multisets
   can be used to iterate over the indices of a k-th order symmetric
   tensor in n-space. (Rhys Ulerich)

** Added gsl_integrate_glfixed routines for performing fixed order
   Gauss-Legendre integration 
   (Pavel Holoborodko, Konstantin Holoborodko, Rhys Ulerich)

** In the LMDER multi-dimensional fitting routines, the return code
   GSL_ENOPROG is now used instead of GSL_CONTINUE for the case where